--- a/web/index.html
+++ b/web/index.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>document.documentElement.className += ' js';</script>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+
+    
     <title>Animais fantásticos</title>
 </head>
 
 <body>
-    <nav class="menu">
+    <nav class="menu js-menu">
         <ul>
             <li><a href="#animais">Animais</a></li>
             <li><a href="#faq">Faq</a></li>
@@ -21,9 +24,9 @@
         </ul>
     </nav>
 
-    <section class="grid-section animais" id="animais">
+    <section class="grid-section animais js-scroll" id="animais">
         <h1 class="titulo">Animais Fantásticos</h1>
-        <ul class="animais-lista">
+        <ul class="animais-lista js-tabmenu">
             <li>
                 <img src="./img/imagem1.jpg" alt="Raposa">
             </li>
@@ -43,6 +46,7 @@
                 <img src="./img/imagem6.jpg" alt="Leãoooo">
             </li>
         </ul>
+
         <div class="animais-descricao js-tabcontent">
             <section>
                 <h2>Raposa</h2>
@@ -161,7 +165,7 @@
         <p>Todos os direitos reservados.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./script/script.js"></script>
 </body>
 
 </html>
